src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>APR__c</fullName>
        <inlineHelpText>Calculated by LoanServicer for adjustable rate loans at the time the loan is created (or loan parameters are updated). Does not update when we change the Benchmark Rate</inlineHelpText>
        <label>APR</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Acquisition_Status__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in Loan Servicer</inlineHelpText>
        <label>XXX Acquisition Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Deduction_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autopay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avidia_Account_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is dataloaded in with loan days past due information for if they they are currently paying with an avidia account.</description>
        <inlineHelpText>This is dataloaded in with loan days past due information for if they they are currently paying with an avidia account.</inlineHelpText>
        <label>Avidia Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avidia_Outstanding_Loan_Balance__c</fullName>
        <formula>IF(AND(NOT(ISBLANK( IRBD_Principal_Interest_Date_Received__c )), NOT(ISBLANK(IRBD_Interest_Only_Date_Received__c))), 

Principall__c - Principal_Paid__c -  IRBD_Interest_Only__c -  IRBD_Principal_interest__c,

IF(AND(ISBLANK(IRBD_Principal_Interest_Date_Received__c), NOT(ISBLANK(IRBD_Interest_Only_Date_Received__c))), 

Principall__c - Principal_Paid__c -  IRBD_Interest_Only__c ,

Principall__c - Principal_Paid__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avidia Outstanding Loan Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BlueWave_Avidia_Rate_XXX__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>BlueWave/Avidia Rate XXX</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BlueWave_Avidia_Rate__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>BlueWave/Avidia Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Capital_Available__c</fullName>
        <formula>Loan_Tranche__r.Available_Capital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capital Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commencement_Date_Text__c</fullName>
        <description>This should match the Opportunity commencement date and pulls into DocuSign.</description>
        <formula>TEXT(MONTH(Commencement_Datee__c))+&quot;/&quot; +TEXT(DAY(Commencement_Datee__c))+&quot;/&quot; +TEXT(YEAR(Commencement_Datee__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commencement Date (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <formula>Opportunity__r.Commencement_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XXY Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commencement_Datee__c</fullName>
        <inlineHelpText>The estimated commencement date of the loan, 30 days after the estimated completion date. Set by installers when providing system information.</inlineHelpText>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Apex sets field to true when the related Opportunity&apos;s Stage is set to Complete. The use case for this field is to allow for Parent Roll-Up Summaries to summarize data based only on acquired customers - e.g. Loan Tranche rolling up committed capital. It doesn&apos;t work on formula fields do to cross-object references.</description>
        <inlineHelpText>LoanHandler sets this field to true when the related Opportunity&apos;s Stage is set to Complete.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Month_Year__c</fullName>
        <formula>MONTH(TODAY()) + YEAR(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month/Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <description>Used in building reports requested by CMC Team.</description>
        <formula>IF(  ISBLANK(Loan_Portfolio__r.Sale_Date__c),  
     IF(  ISBLANK(Date_of_Loan_Purchase__c),  TEXT(Product__r.Lender_of_Record__c) , &quot;BlueWave&quot;) ,  
     Loan_Portfolio__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOER_Loan_Base_Rate_XXX__c</fullName>
        <defaultValue>0.0489</defaultValue>
        <label>DOER Loan Base Rate XXX</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOER_Loan_Base_Rate__c</fullName>
        <defaultValue>0.0489</defaultValue>
        <label>XXX DOER Loan Base Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOER_Solar_Loann__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates a DOER loan. LoanHandler code sets this from the Lead&apos;s DOER Solar Loan checkbox when creating the Loan.</inlineHelpText>
        <label>DOER Solar Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTI_for_Portfolio_ReportingD__c</fullName>
        <formula>Opportunity__r.Combined_DTI_After__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows Combined DTI After from Opportunity, which takes joint applications and adjusted income and dti into consideration.</inlineHelpText>
        <label>DTI for Portfolio Reporting</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Contract_Signature_Disbursed__c</fullName>
        <description>Used in MCEC Report Data Object</description>
        <inlineHelpText>Used in MCEC Report Data Object</inlineHelpText>
        <label>Date Contract Signature Disbursed</label>
        <summarizedField>Disbursal__c.Date_of_Disbursal__c</summarizedField>
        <summaryFilterItems>
            <field>Disbursal__c.Date_of_Disbursal__c</field>
            <operation>notEqual</operation>
            <value>&quot;&quot;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Disbursal__c.Type__c</field>
            <operation>equals</operation>
            <value>Contract Signature</value>
        </summaryFilterItems>
        <summaryForeignKey>Disbursal__c.Loan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Interconnection_Disbursed__c</fullName>
        <description>Used in MCEC Report Data</description>
        <inlineHelpText>Used in MCEC Report Data</inlineHelpText>
        <label>Date Interconnection Disbursed</label>
        <summarizedField>Disbursal__c.Date_of_Disbursal__c</summarizedField>
        <summaryFilterItems>
            <field>Disbursal__c.Date_of_Disbursal__c</field>
            <operation>notEqual</operation>
            <value>&quot;&quot;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Disbursal__c.Type__c</field>
            <operation>equals</operation>
            <value>Interconnection</value>
        </summaryFilterItems>
        <summaryForeignKey>Disbursal__c.Loan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_of_Loan_Purchase__c</fullName>
        <label>Date of Loan Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <label>Days Past Due</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-30</fullName>
                </value>
                <value>
                    <fullName>31-60</fullName>
                </value>
                <value>
                    <fullName>61-90</fullName>
                </value>
                <value>
                    <fullName>91+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Difference_Loan_Value_Balance__c</fullName>
        <formula>Loan_Purchase_Price__c -  Avidia_Outstanding_Loan_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference (Loan Value - Balance)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursal_1_Contract_Date__c</fullName>
        <formula>Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XXX Disbursal 1 (Contract) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disbursal_Contract_Signature__c</fullName>
        <formula>if(isblank( Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c )=true,0,Opportunity__r.Disbursal_1_Contract_Signature__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disbursal (Contract Signature</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursal_Full_Install__c</fullName>
        <formula>if(isblank( Opportunity__r.Disbursal_3_Full_Install_Checkbox__c )=true,0,Opportunity__r.Disbursal_3_Full_Install__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disbursal (Full Install)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursal_Mechanical_Installation__c</fullName>
        <formula>if(isblank( Opportunity__r.Disbursal_2_Mechanical_Install_Checkbox__c )=true,0,Opportunity__r.Disbursal_2_Mechanical_Installation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disbursal (Mechanical Installation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date_of_Set_Rate_Period__c</fullName>
        <formula>text(month(addmonths(Commencement_Datee__c, (Product__r.First_Adjustment__c-1))))+&quot;/&quot;+ 
text(day(addmonths(Commencement_Datee__c, (Product__r.First_Adjustment__c-1)))) +&quot;/&quot;+ 
text(year(addmonths(Commencement_Datee__c, (Product__r.First_Adjustment__c-1))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date of Set Rate Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <inlineHelpText>Estimated installation completion date for this solar system, provided by installers when providing system information, and used to calculate the Commencement Date (30 days after this date).</inlineHelpText>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excess_Cash_back_to_BW__c</fullName>
        <formula>Difference_Loan_Value_Balance__c * 0.7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Excess Cash back to BW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Excess_Cash_stays_w_Avidia2__c</fullName>
        <label>Excess Cash stays w/ Avidia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Excess_Cash_stays_w_Avidia__c</fullName>
        <formula>Difference_Loan_Value_Balance__c * 0.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Excess Cash stays w/ Avidia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Excess_cash_back_to_BW2__c</fullName>
        <label>Excess cash back to BW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FICO_Co_Applicant__c</fullName>
        <formula>Opportunity__r.FICO_Co_Applicant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FICO (Co-Applicant)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FICO__c</fullName>
        <formula>Opportunity__r.FICO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FICO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fifth_Adjustable_Monthly_Payment_Amount__c</fullName>
        <label>Fifth Adjustable Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Fee__c</fullName>
        <description>Set by Apex from the Lead&apos;s Loan Financing Fee field.</description>
        <inlineHelpText>LoanHandler code sets this from the Lead&apos;s &quot;Loan Financing Fee&quot; field when creating the Loan.</inlineHelpText>
        <label>Financing Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Adjustable_Monthly_Payment_Amount__c</fullName>
        <label>First Adjustable Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date_Override__c</fullName>
        <inlineHelpText>30 days after the corresponding disbursal (first disbursal for DOER, last disbursal for non-DOER) capped at day 28, set by code when BizOps updates the Disbursal &quot;Date of Disbursal&quot;.</inlineHelpText>
        <label>First Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date__c</fullName>
        <description>DOER Loan payments start a month from the first dispersal (if it&apos;s on the 29-31st, then the first payment is due on the 28th of the next month). 
For non DOER, the first payment is due a month from final disbursal, ((if it&apos;s on the 29-31st, then the first payment is due on the 28th of the next month)

Retired 6/13/18 with part of the disbursal changes</description>
        <formula>IF(NOT(ISBLANK(First_Payment_Due_Date_Override__c)), 
First_Payment_Due_Date_Override__c,

IF(Opportunity__r.DOER_Solar_Loan__c  = TRUE, 
DATE( 
IF(
OR(
Month(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c) = 12, 
AND(
Month(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c)= 11, 
Day(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c) &gt;= 29)),
Year(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c) +1, 
Year(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c)), 

	 		
IF(
OR(
Month(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c)=12, 
AND(
Month(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c)=11, 
Day(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c)&gt;=29)), 
IF(
AND(
Month(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c) = 12, 
Day(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c) &gt;= 29), 
2, 
1),
IF(
DAY(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c)&gt;= 29, 
Month(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c)+2, 
Month(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c)+1)),
 

		 
IF(
Day(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c)&gt;=29,
1,
Day(Opportunity__r.Disbursal_1_Contract_Signature_Checkbox__c))), 

DATE( 
IF(
OR(
Month(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c) = 12, 
AND(
Month(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c)= 11, 
Day(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c) &gt;= 29)),
Year(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c) +1, 
Year(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c)), 
  	
IF(
OR(
Month(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c)=12, 
AND(
Month(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c)=11, 
Day(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c)&gt;=29)), 
IF(
AND(
Month(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c) = 12, 
Day(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c) &gt;= 29), 
2, 
1),
IF(
DAY(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c)&gt;= 29, 
Month(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c)+2, 
Month(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c)+1)),
   		
IF(
Day( Opportunity__r.Disbursal_3_Full_Install_Checkbox__c)&gt;=29,
1, 
Day(Opportunity__r.Disbursal_3_Full_Install_Checkbox__c)))))</formula>
        <inlineHelpText>The date the first payment is due on a loan, takes into account different first payment dates for different loan types.</inlineHelpText>
        <label>XXFirst Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due__c</fullName>
        <formula>DATE(
if(month(Commencement_Datee__c)=12,Year(Commencement_Datee__c)+1, year(Commencement_Datee__c)), 

if(month(Commencement_Datee__c)=12,1,Month(Commencement_Datee__c)+1), Day(Commencement_Datee__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XXX First Payment Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixture_Filing_Submitted_to_LD__c</fullName>
        <label>Fixture Filing Submitted to LD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fourth_Adjustable_Monthly_Payment_Amount__c</fullName>
        <label>Fourth Adjustable Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IBLS_Amount__c</fullName>
        <label>IBLS Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IRBD_Interest_Only_Date_Received__c</fullName>
        <label>IRBD (Interest Only) Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IRBD_Interest_Only__c</fullName>
        <label>IRBD (Interest Only)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IRBD_Principal_Interest_Date_Received__c</fullName>
        <label>IRBD (Principal &amp; Interest)Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IRBD_Principal_interest__c</fullName>
        <label>IRBD (Principal &amp; Interest)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IRBD_Rate_XXX__c</fullName>
        <defaultValue>0.0189</defaultValue>
        <label>IRBD Rate XXX</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IRBD_Rate__c</fullName>
        <defaultValue>0.0189</defaultValue>
        <label>IRBD Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Accrued__c</fullName>
        <formula>Interest_Paid__c / (Today__c -   Commencement_Datee__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XXX Interest Accrued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Only_End_Date2__c</fullName>
        <formula>DATE(

YEAR(Commencement_Datee__c ) + FLOOR((MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c - 1)/12),

CASE(MOD(MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c, 12 ), 0, 12, MOD(MONTH(Commencement_Datee__c )+ Product__r.Loan_Interest_Only_Period__c, 12 )),


MIN(DAY(Commencement_Datee__c ), CASE(MOD(MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c,12), 9, 30, 4, 30, 6, 30, 11, 30, 2, 

IF(MOD(YEAR(Commencement_Datee__c ) + FLOOR((MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c)/12), 400) = 0 || (MOD(YEAR(Commencement_Datee__c ) + FLOOR((MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c)/12), 4) = 0 &amp;&amp; MOD(YEAR(Commencement_Datee__c ) + FLOOR((MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c)/12), 100) &lt;&gt; 0 ), 29,28), 31)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula that calculates IO End Date based on Commencement Date and the Product&apos;s &quot;Loan Interest Only Period&quot;</inlineHelpText>
        <label>Interest Only End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Only_End_Date_Text__c</fullName>
        <formula>TEXT(CASE(MOD(MONTH( Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c, 12 ), 0, 12, MOD(MONTH(Commencement_Datee__c )+ Product__r.Loan_Interest_Only_Period__c, 12 )))

+&quot;/&quot; +

TEXT(MIN(DAY(Commencement_Datee__c ), CASE(MOD(MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c,12), 9, 30, 4, 30, 6, 30, 11, 30, 2, 

IF(MOD(YEAR(Commencement_Datee__c ) + FLOOR((MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c)/12), 400) = 0 || (MOD(YEAR(Commencement_Datee__c ) + FLOOR((MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c)/12), 4) = 0 &amp;&amp; MOD(YEAR(Commencement_Datee__c ) + FLOOR((MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c)/12), 100) &lt;&gt; 0 ), 29,28), 31)) )

+&quot;/&quot; +

TEXT(YEAR(Commencement_Datee__c ) + FLOOR((MONTH(Commencement_Datee__c ) + Product__r.Loan_Interest_Only_Period__c - 1)/12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by DocuSign for non DOER</inlineHelpText>
        <label>Interest Only End Date (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Only_Payment__c</fullName>
        <description>Formula reference to Interest Only Payment on opportunity.  That field is a formula multiplying the Loan Amount Financed times the Interest Rate from the Product and dividing by 12.  For DOER Loans it is the same calculation but multiplied times 0.35 to account for the disbursal and payment terms for those products.</description>
        <formula>Opportunity__r.Interest_Only_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to Interest Only Payment on opportunity.  That field is a formula multiplying the Loan Amount Financed times the Interest Rate from the Product and dividing by 12.  For DOER Loans it is the same calculation but multiplied times 0.35.</inlineHelpText>
        <label>Interest Only Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Only_Period__c</fullName>
        <description>This is a formula field referencing the Interest Only Period on the assigned Product Record</description>
        <formula>Opportunity__r.Product__r.Loan_Interest_Only_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula field referencing the Interest Only Period on the assigned Product Record</inlineHelpText>
        <label>Interest Only Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Paid__c</fullName>
        <description>This is a roll-up summary of the Interest Payment field from the Loan Payment object.  It represents the sum of interest paid to date according to salesforce.  The system of record for this information is Lease Dimensions.</description>
        <inlineHelpText>This is a roll-up summary of the Interest Payment field from the Loan Payment object.  It represents the sum of interest paid to date according to salesforce.  The system of record for this information is Lease Dimensions.</inlineHelpText>
        <label>Interest Paid</label>
        <summarizedField>Loan_Payment__c.Interest_Payment__c</summarizedField>
        <summaryForeignKey>Loan_Payment__c.Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Interest_Paid_rounded__c</fullName>
        <formula>round( Interest_Paid__c,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <description>This is the interest rate on the loan.  It is a formula field that references the Product__r.Loan_Interest_Rate__c assigned to this loan.</description>
        <formula>Product__r.Loan_Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the interest rate on the loan.  It is a formula field that references the Product__r.Loan_Interest_Rate__c assigned to this loan.</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Ratee__c</fullName>
        <label>XXXInterest Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Due_Date_Paid__c</fullName>
        <inlineHelpText>Formula that shows the latest &quot;Date of Payment&quot; from related Loan Payment records that have a Payment greater than 0</inlineHelpText>
        <label>Last Due Date Paid</label>
        <summarizedField>Loan_Payment__c.Payment_1__c</summarizedField>
        <summaryFilterItems>
            <field>Loan_Payment__c.Payment__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan_Payment__c.Loan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Late_Category__c</fullName>
        <label>Late Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <label>Lead ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set by LoanHandler when creating the Loan from the lead</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Dimensions_Email__c</fullName>
        <description>##Conga created btn:00bj0000001O0hF</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;emailtemplateid=00Xj0000000FnkO&quot; + 
&quot;&amp;emailfromid=0D2j00000004JnV&quot; + 
&quot;&amp;emailtoid=003j000001I9cZE&quot; + 
&quot;&amp;ac0=1&quot; + 
&quot;&amp;ac1=Lease Dimensions Email 2&quot; + 
&quot;&amp;emailadditionalto=&quot; + xxLeadID__c +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>Lease Dimensions Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Base_Rate__c</fullName>
        <formula>IF(DOER_Solar_Loann__c = TRUE,  Product__r.Loan_Base_Rate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Base Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Cleanup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the script has been run to move attachments to Loan Document</description>
        <label>Loan Cleanup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capital Pool</label>
        <referenceTo>Loan_Data__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Fee_1_Amount__c</fullName>
        <formula>IF(NOT(ISBLANK(Loan_Fee_1__c)), Loan_Fee_1__c * Requested_Loan_Amount__c, NULL)</formula>
        <inlineHelpText>Calculates Loan Fee 1</inlineHelpText>
        <label>Loan Fee 1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Fee_1_Description__c</fullName>
        <formula>IF(NOT(ISBLANK( Product__r.Loan_Fee_1_Description__c)),Product__r.Loan_Fee_1_Description__c,NULL)</formula>
        <inlineHelpText>Description of Loan Fee 1</inlineHelpText>
        <label>Loan Fee 1 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Fee_1__c</fullName>
        <description>Set by LoanHandler when the Loan is created; can&apos;t be a formula since Principal needs include this in it&apos;s formula, and is itself used in a Rollup Summary (which can&apos;t reference formulas).</description>
        <inlineHelpText>Copied from the Product&apos;s Loan Fee 1, to be used in the Principal Formula.</inlineHelpText>
        <label>Loan Fee 1</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Internal_Lender_Rate__c</fullName>
        <formula>IF(DOER_Solar_Loann__c = TRUE,  Product__r.Loan_Internal_Lender_Rate__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Internal Lender Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <displayFormat>BW{0000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Auto-Number used to identify the Loan with external parties (like third party servicing)</inlineHelpText>
        <label>Loan Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Loan_Origination_Date__c</fullName>
        <description>Formula reference to OPPORTUNITY: Contract Close Date</description>
        <formula>Opportunity__r.Contract_Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to OPPORTUNITY: Contract Close Date</inlineHelpText>
        <label>Loan Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional lookup to a Loan Portfolio, used to group loans together for sale or analysis</inlineHelpText>
        <label>Loan Portfolio</label>
        <referenceTo>Loan_Portfolio__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Purchase_Price__c</fullName>
        <label>Loan Purchase Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <inlineHelpText>Picklist manually set by BizOps which indicates whether a loan is Paid Off (or other statuses in the future).</inlineHelpText>
        <label>Loan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <description>This is a formula referencing the Loan Term as defined in the assigned Product.  It represents the length of the amortization period of the loan in months.</description>
        <formula>Product__r.Loan_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula referencing the Loan Term as defined in the assigned Product.  It represents the length of the amortization period of the loan in months.</inlineHelpText>
        <label>Loan Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Tranche1__c</fullName>
        <formula>Loan_Tranche__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tranche ID</label>
        <type>Text</type>
    </fields>
</CustomObject>